--- a/style.css
+++ b/style.css
@@ -27,13 +27,13 @@
     text-decoration: underline;
 }
 #hero{
-    background:url("background.png");
+    background:url("../background.png");
     height:100vh;
     width:100vw;
     background-size:cover;
 }
 #hero2{
-    background:url("background.png");
+    background:url("../background.png");
     height:50vh;
     width:100vw;
     background-size:cover; 
@@ -41,6 +41,17 @@
 }
 
 #donate{
+    display:block;
+    width:100vw;
+    height:25vh;
+    text-align:center;
+    background-color:#efefef;
+    position:absolute;
+    top:50vh;
+    padding-top:5vh;
+}
+
+#problem{
     display:block;
     width:100vw;
     height:25vh;
